HW03/Task2-603750.err
/var/spool/slurmd/job603750/slurm_script:cd:18: no such file or directory: repo759/HW03
convolution.cpp: In function ‘void convolve(const float*, float*, std::size_t, const float*, std::size_t)’:
convolution.cpp:7:1: error: version control conflict marker in file
    7 | <<<<<<< HEAD
      | ^~~~~~~
convolution.cpp:10:1: error: version control conflict marker in file
   10 | =======
      | ^~~~~~~
convolution.cpp:16:1: error: version control conflict marker in file
   16 | >>>>>>> 4489d32496f150584e84e3dd86688b7504089cb5
      | ^~~~~~~
convolution.cpp:30:1: error: version control conflict marker in file
   30 | <<<<<<< HEAD
      | ^~~~~~~
convolution.cpp:12:18: warning: unused variable ‘y’ [-Wunused-variable]
   12 |     unsigned int y = 0;
      |                  ^
convolution.cpp: At global scope:
convolution.cpp:32:1: error: version control conflict marker in file
   32 | =======
      | ^~~~~~~
convolution.cpp:41:1: error: expected declaration before ‘}’ token
   41 | }
      | ^
